# cookie_website

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20221204_1717.py  0003_userpreferences.py  0004_rename_user_userpreferences_email.py  0005_alter_userpreferences_email.py  0006_alter_userpreferences_options.py  0007_auto_20221213_0252.py
cookie_booths/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
cookie_booths/migrations/: 0001_initial.py  0002_alter_boothblock_booth_block_current_troop_owner.py  0003_alter_boothblock_options_alter_boothlocation_options_and_more.py  0003_auto_20211024_1429.py  0003_auto_20221008_2007.py  0003_auto_20221008_2047.py  0004_auto_20221009_0036.py  0005_alter_boothblock_options.py  0005_alter_boothlocation_booth_hours.py  0006_alter_boothlocation_booth_hours.py  0006_auto_20221031_0204.py  0007_auto_20211106_1555.py  0007_cookieseason.py  0008_alter_boothhours_options.py  0008_auto_20211120_1131.py  0009_auto_20211121_0857.py  0009_auto_20221222_2024.py  0010_alter_cookieseason_ffa_day_of_week.py  0011_alter_cookieseason_ffa_day_of_week.py  0012_auto_20211208_1725.py
cookie_website/: asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
pages/: tests.py
templates/: base.html  index.html
troops/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/: apps.py  forms.py  models.py  tests.py  urls.py
(+89 files in other folders)
